Add extensible operations modules
